# bci-research

./: .gitignore  CLAUDE.md  README.md
app/: .env.example  pyproject.toml
app/src/bci_agent/: __init__.py  agent.py  decoder.py  main.py  signal.py  tools.py
app/tests/: test_agent.py  test_decoder.py  test_signal.py
cloud/bci-agent/: index.js  package.json
cloud/bci_agent/: config.json  index.py  requirements.txt  test_local.py
docs/: 01-fundamentals.md  02-core-technology.md  03-companies-and-products.md  04-applications.md  05-open-source-resources.md  06-ethics-and-regulation.md  07-china-landscape.md  08-bci-ai-fusion.md  09-bci-agent-architecture.md  10-sdk-selection-mindoctopus.md  11-neuralink-tech-stack.md
docs/maintenance/: 2026-06-27-bci-research-triage.md
docs/superpowers/plans/: 2026-03-24-bci-agent-mvp.md  2026-03-31-bci-demo.md
docs/superpowers/specs/: 2026-03-31-bci-demo-design.md
references/: sources.md
web/: .env.example  next.config.ts  package-lock.json  package.json  vercel.json
web/app/: error.tsx  globals.css  layout.tsx  page.tsx
web/components/: band-bars.tsx  chat-panel.tsx  state-switcher.tsx  status-cards.tsx  waveform-chart.tsx
web/hooks/: use-bci-engine.ts
web/lib/: agent-api.ts  band-analyzer.ts  band-analyzer.worker.ts  signal-generator.ts
